Manifests/argo-cd/templates/server/service.yaml
---
# Source: argo-cd/templates/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-server
  namespace: "argo-cd"
  labels:
    app.kubernetes.io/name: argo-cd
    helm.sh/chart: argo-cd-4.5.2
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
      nodePort: null
    - name: https
      port: 443
      # NOTE: Argo CD uses only one port (8080) configured with https and always redirects http request to it, so the target port is the same than for http
      targetPort: http
      protocol: TCP
      nodePort: null
  selector:
    app.kubernetes.io/name: argo-cd
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: server
