Manifests/argo-cd/templates/server/ingress.yaml
---
# Source: argo-cd/templates/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-server
  namespace: "argo-cd"
  labels:
    app.kubernetes.io/name: argo-cd
    helm.sh/chart: argo-cd-4.5.2
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: server
  annotations:
    cert-manager.io/cluster-issuer: example-internal-ca
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  rules:
    - host: argo-cd.example.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: argo-cd-server
                port:
                  name: https
  tls:
    - hosts:
        - argo-cd.example.org
      secretName: argo-cd.example.org-tls
